# ipas-net-zero-quiz

./: .env.production  .eslintrc.js  .gitattributes  .gitignore  .markdownlint.jsonc  BATCH_1_COMPLETION_SUMMARY.md  BATCH_1_DETAILED_VERIFICATION_MATRIX.md  BATCH_1_EXECUTIVE_SUMMARY.md  BATCH_1_HANDOVER.txt  BATCH_1_VERIFICATION_REPORT.md  BATCH_VERIFICATION_TEMPLATE.md  CONTENT-CURRENCY.md  DATA-PROVENANCE.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_V2_SUCCESS.md  DETAILED_VERIFICATION.md  Dockerfile  EXECUTIVE_SUMMARY.md  FEATURE_UPDATE_SUMMARY.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_VERIFICATION_SUMMARY.md  NEEDS-SOURCING.md  NOTICE  PERFORMANCE.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_LAUNCH_SUMMARY.md  PHASE_2_PROGRESS_TRACKER.md  PHASE_2_VERIFICATION_PLAN.md  README.md  RECOMMENDED_CORRECTIONS.md  RELEASE_v2.0.0.md  SPEC.md  TEST_SUMMARY.md  UNVERIFIABLE.md  VERIFICATION-GAPS.md  VERIFICATION_DELIVERY_SUMMARY.txt  VERIFICATION_MATRIX.csv  VERIFICATION_PLAN.md  VERIFICATION_REPORT.md  (+20 more)
.github/: labeler.yml
docker/: default.conf  nginx.conf
docs/: PROGRESS_DASHBOARD.md  README.md  api-documentation.md  architecture-overview.md  configuration-guide.md  deployment-guide.md  developer-guide.md  quiz-logic.md  state-management.md  user-guide-zh-TW.md
public/: manifest.webmanifest
quiz-app/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  verify_copy.txt  vite.config.ts  vitest.config.ts
schemas/: dataset.schema.json  item.schema.json
scripts/: analyze_datasets.py  deploy.sh  (+15 more)
(+243 files in other folders)
