[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nzq"
version = "0.1.0"
description = "Crawler + extractor for iPAS Net-Zero Carbon Planning Manager question bank"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hsiu-Chi Tsai", email = "example@example.com"}]
dependencies = [
  "httpx>=0.27",
  "tenacity>=9.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "jsonschema>=4.22",
  "pdfminer.six>=20231228",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
nzq = "nzq.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

